[package]
name = "taker_basic"
version = "0.1.0"
edition = "2021"
description = "Basic example of using the Coinswap Taker API"
license = "MIT"

[dependencies]
# Main coinswap library
coinswap = { path = "../.." }
log = "0.4"
env_logger = "0.9"

# Bitcoin and RPC dependencies
bitcoin = "0.32"
bitcoind = "0.36"

[features]
# Enable integration test features from coinswap
default = []
integration-test = ["coinswap/integration-test"]

[[bin]]
name = "taker_basic"
path = "src/main.rs"