[package]
name = "wallet_basic"
version = "0.1.0"
edition = "2021"
description = "Basic example of using the Coinswap Wallet API"
license = "MIT"

[dependencies]
# Main coinswap library
coinswap = { path = "../.." }

# Bitcoin and RPC dependencies
bitcoin = "0.32"
bitcoind = "0.36"

# Logging
env_logger = "0.11"
log = "0.4"